--- a/fly.toml
+++ b/fly.toml
@@ -1,30 +1,23 @@
-# fly.toml
-app = "built-by-rain-api"
+# fly.toml app configuration file generated for api-fitness-app on 2025-05-14T15:33:37Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
+app = 'api-fitness-app'
+primary_region = 'scl'
 
-[env]
-  PORT = "8080"
+[build]
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 0
+  processes = ['app']
 
-[[services.ports]]
-  port = 80
-  handlers = ["http"]
-  force_https = true
-
-[[services.ports]]
-  port = 443
-  handlers = ["tls", "http"]
-
-[services.concurrency]
-  type = "connections"
-  hard_limit = 25
-  soft_limit = 20
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
